lots of changes

--- a/config.json
+++ b/config.json
@@ -1,5 +1,10 @@
 {
     "Hostname": "0.0.0.0",
     "Port": "5001",
-    "Loglevel": "info"
+    "Loglevel": "info",
+    "Gpus": [
+        {
+            "Id": 0
+        }
+    ]
 }
